# portal_core_v2

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  pyproject.toml
apps/accounts/: apps.py  forms.py  signals.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/profiles/: models.py  signals.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/security/: views.py
autho_core/: __init__.py  admin.py  apps.py  decorators.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
autho_core/static/autho_core/css/: autho_core.css
autho_core/static/autho_core/js/: autho_core.js
autho_core/templates/autho_core/: base.html  lockout.html  login.html  mfa_setup.html  mfa_verify.html  password_change.html  password_reset.html  password_reset_done.html  profile.html  profile_edit.html  register.html  register_success.html
config/: settings.py  urls.py
templates/: test.html
templates/accounts/: login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
templates/dashboard/: home.html
templates/layouts/: app.html  auth.html  public.html
templates/profiles/: profile.html
templates/security/: lockout.html
